src/test/vm/interface1.php.exp
HipHop Fatal error: Class D contains abstract method () and must therefore be declared abstract or implement the remaining methods in src/test/vm/interface1.php on line 8
