src/test/vm/interface1.php.filter
#!/bin/bash

sed -e 's, in [^ ]*src/, in src/,' | sed 's/(.*)/()/g'
